[project]
name = "modern-hopfield-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kornia>=0.8.1",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
